# Lengine

./: README  README.md
engine/: 2  Cargo.toml
engine/res/: cube.mtl
engine/src/: app.rs  camera.rs  instance.rs  lib.rs  main.rs  model.rs  pipeline.rs  resources.rs  state.rs  texture.rs  vertex_buffer.rs
engine/src/shaders/: bw_shader.wgsl  ex_shader.wgsl  shader.wgsl
renderer/: Cargo.toml  Dockerfile  README.md  build.ps1  build.rs  build.sh
renderer/src/: camera.rs  instance.rs  lib.rs  light.rs  main.rs  model.rs  pipeline.rs  resources.rs  state.rs  texture.rs  uniform.rs
renderer/src/shaders/: shader.wgsl  unlit.wgsl
