[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow="1.0"
winit={version="0.30",features=["android-native-activity"]}
env_logger="0.10"
log="0.4"
wgpu="25.0"
cfg-if="1"
pollster="0.3"
bytemuck={version="1.16",features=["derive"]}
cgmath="0.18"
instant="0.1"
tobj = { version = "3.2", default-features = false, features = ["async"]}
mikktspace = { version = "0.3.0" }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "25.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest={version="0.11"}

[lib]
crate-type = ["cdylib", "rlib"]
